--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.2",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.0.9"
   },
   "devDependencies": {
