--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.4.3",
+    "@material-ui/icons": "^4.4.3",
     "apollo-boost": "^0.1.2",
     "graphql": "^0.13.1",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
     "react-apollo": "^3.1.1",
     "react-dom": "^16.9.0",
+    "react-dotdotdot": "^1.3.1",
     "react-router-dom": "^5.1.0",
     "react-scripts": "1.1.1",
     "styled-components": "^4.4.0"
