--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.1",
     "moment": "^2.24.0",
-    "mongoose": "^5.0.9"
+    "mongoose": "^5.0.9",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
