--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,14 @@
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
     "apollo-boost": "^0.1.2",
+    "final-form": "^4.18.5",
     "graphql": "^0.13.1",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
     "react-apollo": "^3.1.1",
     "react-dom": "^16.9.0",
     "react-dotdotdot": "^1.3.1",
+    "react-final-form": "^6.3.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "1.1.1",
     "styled-components": "^4.4.0"
