--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
+    "@material-ui/pickers": "^3.2.6",
     "apollo-boost": "^0.1.2",
+    "date-fns": "^2.0.0-beta.5",
     "final-form": "^4.18.5",
     "graphql": "^0.13.1",
     "lodash": "^4.17.15",
